Bug 15642 - winbindd, net ads join and other things don't work on an ipv6 only host
Summary: winbindd, net ads join and other things don't work on an ipv6 only host
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.20.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-07 15:45 UTC by Stefan Metzmacher
Modified: 2024-06-19 14:34 UTC (History)
2 users (show)

See Also:


Attachments
Patch for v4-20-test (1.91 KB, text/plain)
2024-05-29 14:23 UTC, Stefan Metzmacher
gd: review+
Details
Patch for v4-19-test (1.91 KB, text/plain)
2024-05-29 14:23 UTC, Stefan Metzmacher
gd: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2024-05-07 15:45:54 UTC
'net ads join' fails on an ipv6 only system, because
ndr_push_NETLOGON_SAM_LOGON_RESPONSE_EX in store_cldap_reply() rejects
the ipv6 address (which is not really used).

Windows DCs return an ipv4 address for CLDAP responses over ipv6
(if no real ipv4 address is available it returns 127.0.0.1 as fallback).

So we can do the same locally in order to fill our cache.

I'm wondering why this was not found while fixing https://bugzilla.samba.org/show_bug.cgi?id=15325 ...
Comment 1 Samba QA Contact 2024-05-10 01:36:14 UTC
This bug was referenced in samba master:

712ffbffc03c7dcd551c1e22815ebe7c0b9b45d2
Comment 2 Stefan Metzmacher 2024-05-29 14:23:06 UTC
Created attachment 18310 [details]
Patch for v4-20-test
Comment 3 Stefan Metzmacher 2024-05-29 14:23:30 UTC
Created attachment 18311 [details]
Patch for v4-19-test
Comment 4 Guenther Deschner 2024-05-29 18:07:34 UTC
Comment on attachment 18310 [details]
Patch for v4-20-test

LGTM, RB+
Comment 5 Guenther Deschner 2024-05-29 18:08:30 UTC
Comment on attachment 18311 [details]
Patch for v4-19-test

LGTM, RB+
Comment 6 Guenther Deschner 2024-05-29 18:09:50 UTC
Jule, please add to v4-19 and v4-20. Thanks!
Comment 7 Samba QA Contact 2024-05-29 19:26:39 UTC
This bug was referenced in samba v4-19-test:

b6253028b303f4bd59b399e43417c7b050969363
Comment 8 Samba QA Contact 2024-05-30 10:58:38 UTC
This bug was referenced in samba v4-20-test:

ba361b11d2e664f4d84718af71118bcdb31fc1f0
Comment 9 Samba QA Contact 2024-06-10 15:31:55 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.7):

b6253028b303f4bd59b399e43417c7b050969363
Comment 10 Samba QA Contact 2024-06-19 14:34:55 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.2):

ba361b11d2e664f4d84718af71118bcdb31fc1f0